switch to nunjucks

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
       });
     </script>
     <div class="siimple-footer siimple-footer--{{ theme.footer_color | safe }}" align="center">
-   {{ footer }}
+   {{ footer | safe }}
 </div>
     <script>{{ javascript | safe }}</script>
     <style>{{ siimple | safe }}{{ css | safe }}</style>
