💵🌛 Checkpoint ./package.json:8045597/1487 ./engine.js:8045597/86 ./views/index.html:8045597/34 ./app.js:8045597/17

--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
       <a class="siimple-navbar-title">JSONsite</a>
       <div class="siimple--float-right">
         <a
-          class="siimple-navbar-item"
+          class="siimple-navbar-item siimple-link"
           href="https://github.com/jsonsite/jsonsite#readme"
           >Learn more</a
         >
@@ -53,7 +53,7 @@
     <div class="siimple-h1">JSONsite</div>
     <p>
       JSONsite allows you to create sites from one JSON file. See the
-      <a href="https://github.com/jsonsite/jsonsite#readme">GitHub repo</a> for
+      <a href="https://github.com/jsonsite/jsonsite#readme" class="siimple-link">GitHub repo</a> for
       more info.<br /><br />(full homepage coming soon!)
     </p>
   </div>
