add service workers for every site

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,20 @@
     {% endfor %}
 
     <script>
+      
+      // Service workers rock!
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/sw.js', {scope: location.pathname})
+  .then((reg) => {
+    // registration worked
+    console.log('Registration succeeded. Scope is ' + reg.scope);
+  }).catch((error) => {
+    // registration failed
+    console.log('Registration failed with ' + error);
+  });
+}
+      
+      // Main page logic
               var ids = [{% for page in pages %}"{{page.id | safe }}",{% endfor %}];
               function nav(){if(location.hash.substr(1) == ""){
          location.hash = "main"
