💼🍪 Checkpoint ./views/index.html:8045597/1083 ./templates/index.html:8045597/304

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,9 +77,7 @@ if ('serviceWorker' in navigator) {
          location.hash = "main"
         }
         if(!ids.includes(location.hash.substr(1))){
-       var div = document.createElement("div");
-        div.innerHTML = '<h1 class="404-title">Whoops!</h1><br><p class="404-description">That page could not be found. Would you like to go back <a href="#main">home?</a></p>';
-        document.body.appendChild(div);
+       alert("Whoops! That page could not be found!")
         }
         var i = 0;
         while(i < ids.length){
