--- a/views/index.html
+++ b/views/index.html
@@ -46,6 +46,11 @@
           href="https://github.com/jsonsite/jsonsite#readme"
           >Learn more</a
         >
+          <a
+          class="siimple-navbar-item siimple-link"
+          href="https://jsonsite.glitch.me/site/demo/"
+          >Demo</a
+        >
       </div>
     </div>
   </header>
@@ -53,8 +58,7 @@
     <div class="siimple-h1">JSONsite</div>
     <p>
       JSONsite allows you to create sites from one JSON file. So you could take a GiiHub Gists paste that looks like this:
-    <pre><code class="siimple-pre">
-    {
+    <pre><code class="siimple-pre">{
   "title": "John's Website",
   "description": "The amazing website of John Doe",
   "image": "https://cdn.glitch.com/1788ed8a-5cc6-45e9-a3b6-18d6457af699%2Fundraw_profile_pic_ic5t.png?v=1606325421049",
@@ -84,9 +88,10 @@
   "footer": "&copy; 2020 John Doe. All Rights Reserved.",
   "javascript": "console.log('Oooh look, custom JavaScript!')",
   "css": "/* You can put custom CSS here! */"
-}
-    </code></pre>
+}</code></pre>
+    And it will output a (elegant) site that looks something like  <a href="https://jsonsite.glitch.me/site/demo">this!</a>
     </p>
+  
   </div>
   <script>
     if ("serviceWorker" in navigator) {
