🍂🏑 Checkpoint ./views/index.html:8045597/287

--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,7 @@
   <div class="siimple-content siimple-content--extra-large">
     <div class="siimple-h1">JSONsite</div>
     <p>
-      JSONsite allows you to create sites from one JSON file. So you could take a GiiHub Gists paste that looks like this:
+      JSONsite allows you to create sites from one JSON file. So you could take a GitHub Gists paste that looks like this:
     <pre><code class="siimple-pre">{
   "title": "John's Website",
   "description": "The amazing website of John Doe",
@@ -89,7 +89,19 @@
   "javascript": "console.log('Oooh look, custom JavaScript!')",
   "css": "/* You can put custom CSS here! */"
 }</code></pre>
-    And it will output a (elegant) site that looks something like  <a href="https://jsonsite.glitch.me/site/demo">this!</a>
+    And it will output a (elegant) site that looks something like  <a href="https://jsonsite.glitch.me/site/demo" class="siimple-link">this!</a>
+    <br>
+   <li>
+    <ul>
+      Easy to setup
+     </ul>
+     <ul>
+      Elegant
+     </ul>
+     <ul>
+       <del></del>
+     </ul>
+    </li>
     </p>
   
   </div>
