😀✋ Checkpoint ./views/index.html:8045597/13169

--- a/views/index.html
+++ b/views/index.html
@@ -91,19 +91,10 @@
 }</code></pre>
     And it will output a (elegant) site that looks something like  <a href="https://jsonsite.glitch.me/site/demo" class="siimple-link">this!</a>
     <br>
-   <li>
-    <ul>
-      Easy to setup
-     </ul>
-     <ul>
-      Elegant
-     </ul>
-     <ul>
-       <del></del>
-     </ul>
-    </li>
-    </p>
-  
+Easy to setup
+Elegant
+CDN (Provided by Vercel)
+    99.99% Uptime (Provided by Vercel)</p>
   </div>
   <script>
     if ("serviceWorker" in navigator) {
