finish making homepage

--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,7 @@
   <div class="siimple-content siimple-content--extra-large">
     <div class="siimple-h1">JSONsite</div>
     <p>
-      JSONsite allows you to create sites from one JSON file. So you could take a GitHub Gists paste that looks like this:
+      JSONsite allows you to take a JSON file and turn it into a SPA with mini pages. Basically, you add your JSON file (you can put it on something like GitHub Gists or Pastebin) and JSONsite will fetch it an convert it into a full Website. Your JSON file could look like this:
     <pre><code class="siimple-pre">{
   "title": "John's Website",
   "description": "The amazing website of John Doe",
@@ -89,12 +89,18 @@
   "javascript": "console.log('Oooh look, custom JavaScript!')",
   "css": "/* You can put custom CSS here! */"
 }</code></pre>
-    And it will output a (elegant) site that looks something like  <a href="https://jsonsite.glitch.me/site/demo" class="siimple-link">this!</a>
+    And it will output a (elegant) site that looks something like  <a href="https://jsonsite.glitch.me/site/demo" class="siimple-link">this!</a> And guess what? You also get Free hosting on a great CDN (Thanks Vercel!)
     <br>
-Easy to setup
-Elegant
-CDN (Provided by Vercel)
-    99.99% Uptime (Provided by Vercel)</p>
+    <h3>
+      Features
+    </h3>
+&bull;&nbsp;Easy to setup<br>
+&bull;&nbsp;Elegant<br>
+&bull;&nbsp;Free Hosting (Provided by Vercel)<br>
+&bull;&nbsp;CDN (Provided by Vercel)<br>
+&bull;&nbsp;99.99% Uptime (Provided by Vercel)<br>
+&bull;&nbsp;Updated every hour
+    </p>
   </div>
   <script>
     if ("serviceWorker" in navigator) {
