--- a/templates/sitemap.html
+++ b/templates/sitemap.html
@@ -5,6 +5,36 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/siimple@3.3.1/dist/siimple.min.css"
     />
+      <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
+    <title>JSONsite</title>
+  <meta name="title" content="JSONsite" />
+  <meta
+    name="description"
+    content="JSONsite allows you to create a full SPA with one JSON file and free hosting."
+  />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="/" />
+  <meta property="og:title" content="JSONsite" />
+  <meta
+    property="og:description"
+    content="JSONsite allows you to create a full SPA with one JSON file and free hosting."
+  />
+  <meta property="og:image" content="" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="/" />
+  <meta property="twitter:title" content="JSONsite" />
+  <meta
+    property="twitter:description"
+    content="JSONsite allows you to create a full SPA with one JSON file and free hosting."
+  />
+  <meta property="twitter:image" content="" />
   </head>
   <body>
     <div class="siimple-content siimple-content--extra-large">
@@ -12,8 +42,8 @@
       {% for site in sites %}
       <div class="siimple-list" style="max-width:300px;">
         <div class="siimple-list-item">
-          <div class="siimple-list-title"><a href="https://jsonsite.js.org/site/{{ site.pubfrom }}">{{ site.title }}</a></div>
-          Publishes from <a href="{{ site.slug }}">{{ site.slug }}</a>
+          <div class="siimple-list-title"><a href="/site/{{ site.slug }}" class="siimple-link">{{ site.slug }}</a></div>
+          Publishes from <a href="{{ site.pubfrom }}" class="siimple-link">{{ site.pubfrom }}</a>
         </div>
       </div><br>
       {% endfor %}
