Add sitemap to navbar

--- a/views/index.html
+++ b/views/index.html
@@ -52,6 +52,11 @@
           href="https://jsonsite.glitch.me/site/demo/"
           >Demo</a
         >
+          <a
+          class="siimple-navbar-item siimple-link"
+          href="https://jsonsite.glitch.me/sites/"
+          >Sitemap</a
+        >
        
       </div>
     </div>
