👽🏞 Checkpoint ./.gitignore:8045597/5 ./views/index.html:8045597/54

--- a/views/index.html
+++ b/views/index.html
@@ -48,12 +48,12 @@
           >Learn more</a
         >          <a
           class="siimple-navbar-item siimple-link"
-          href="https://jsonsite.glitch.me/site/demo/"
+          href="/site/demo/"
           >Demo</a
         >
           <a
           class="siimple-navbar-item siimple-link"
-          href="https://jsonsite.glitch.me/sites/"
+          href="/sites/"
           >Sitemap</a
         >
        
